--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,9 +10,15 @@ set -g base-index 1
 # start with pane 1
 set -g pane-base-index 1
 
-# split panes using | and -, make sure they open in the same path
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+# split panes using v and s, make sure they open in the same path
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
+
+# select panes same like vim
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 unbind '"'
 unbind %
@@ -33,7 +39,7 @@ set -sg escape-time 1
 set -g allow-rename off
 
 # mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
+set -g mouse off
 
 # enable vi mode keys
 set-window-option -g mode-keys vi
@@ -45,4 +51,3 @@ set -g default-terminal "screen-256color"
 bind u capture-pane \;\
   save-buffer /tmp/tmux-buffer \;\
   split-window -l 10 "urlview /tmp/tmux-buffer"
-
