--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,7 +39,7 @@ set -sg escape-time 1
 set -g allow-rename off
 
 # mouse control (clickable windows, panes, resizable panes)
-set -g mouse off
+set -g mouse on
 
 # enable vi mode keys
 set-window-option -g mode-keys vi
