--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,3 +51,5 @@ set -g default-terminal "screen-256color"
 bind u capture-pane \;\
   save-buffer /tmp/tmux-buffer \;\
   split-window -l 10 "urlview /tmp/tmux-buffer"
+
+set-option -g history-limit 100000
