update tmux with copy command

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,8 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # split panes using v and s, make sure they open in the same path
+unbind '"'
+unbind %
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 
@@ -20,17 +22,8 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-unbind '"'
-unbind %
-
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
-
-# reload config file
-bind r source-file ~/.tmux.conf
-
-unbind p
-bind p previous-window
 
 # shorten command delay
 set -sg escape-time 1
@@ -52,4 +45,15 @@ bind u capture-pane \;\
   save-buffer /tmp/tmux-buffer \;\
   split-window -l 10 "urlview /tmp/tmux-buffer"
 
+# limit memory usage
 set-option -g history-limit 100000
+
+# clipboard setting
+# check https://github.com/tmux/tmux/wiki/Clipboard#how-to-configure---tmux-32-and-later
+if-shell "uname | grep -q Darwin" {
+  set -s copy-command "pbcopy"
+}
+if-shell "uname | grep -q Linux" {
+  set -s copy-command "xclip -selection clipboard"
+}
+
